jira/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jira
  name: jira
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jira
  template:
    metadata:
      labels:
        app: jira
    spec:
      containers:
        - name: jira
          image: atlassian/jira-software:8.4.3
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
          volumeMounts:
          - mountPath: "/var/atlassian/application-data/jira"
            name: jira-data
          ports:
          - containerPort: 8080
            protocol: TCP
      volumes:
      - name: jira-data
        persistentVolumeClaim:
          claimName: jira-pvc
