jira/ingress.yaml
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: jira-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:  
  rules:
  - host: jira.ithub.space
    http:
      paths:
      - path: /
        backend:
          serviceName: jira-service
          servicePort: 8080
  tls:
  - hosts:
    - jira.ithub.space
    secretName: jira-ithub-space-prod-tls
